test/basic/good/max_min_int.lat
int main() {
    printInt(9223372036854775800);
    printInt(-9223372036854775800);
    return 0;
}