test/basic/bad/core014.lat
int main(){
	return 0;
}

/* com */ ment */
